--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Momentum</title>
   <script src="https://momentjs.com/downloads/moment.js"></script>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="js-clock">
     <h1>00:00</h1>
   </div>
+  <form class="js-form form">
+    <input type="text" placeholder="What is your name?" />
+  </form>
+  <h4 class="js-greetings greetings"></h4>
   <script src="clock.js"></script>
+  <script src="greetings.js"></script>
 </body>
 </html>
