--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <input type="text" placeholder="What is your name?" />
   </form>
   <h4 class="js-greetings greetings"></h4>
+  <form class="js-toDoForm">
+    <input type="text" placeholder="Write a to do" />
+  </form>
+  <ul class="js-toDoList">
+  </ul>
   <script src="clock.js"></script>
   <script src="greetings.js"></script>
+  <script src="toDo.js"></script>
 </body>
 </html>
