--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Momentum</title>
   <script src="https://momentjs.com/downloads/moment.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Gothic">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
