--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   </form>
   <ul class="js-toDoList">
   </ul>
+  <span class="js-weather"></span>
   <script src="clock.js"></script>
   <script src="greetings.js"></script>
   <script src="toDo.js"></script>
+  <script src="weather.js"></script>
 </body>
 </html>
