:lipstick: Add Form Style

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
     <h1>00:00</h1>
   </div>
   <form class="js-form form">
-    <input type="text" placeholder="What is your name?" />
+    <span>Hello, what's your name?</span>
+    <input type="text" />
   </form>
-  <h4 class="js-greetings greetings"></h4>
+  <h4 class="js-greetings"></h4>
   <form class="js-toDoForm">
     <input type="text" placeholder="Write a to do" />
   </form>
-  <ul class="js-toDoList">
-  </ul>
+  <ul class="js-toDoList"></ul>
   <span class="js-weather"></span>
+  <script src="constant.js"></script>
+  <script src="display.js"></script>
   <script src="clock.js"></script>
   <script src="greetings.js"></script>
   <script src="toDo.js"></script>
