:sparkles: Add Visual Hide

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="js-clock">
+  <div class="js-clock transition">
     <h1>00:00</h1>
   </div>
-  <form class="js-form form">
+  <form class="js-form form transition">
     <span>Hello, what's your name?</span>
     <input type="text" />
   </form>
-  <h4 class="js-greetings"></h4>
-  <form class="js-toDoForm">
+  <h4 class="js-greetings transition"></h4>
+  <form class="js-toDoForm transition">
     <input type="text" placeholder="Write a to do" />
   </form>
   <ul class="js-toDoList"></ul>
