:lipstick: Add Style at Clock

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="js-clock transition">
+  <div class="js-clock clock transition">
     <h1>00:00</h1>
   </div>
   <form class="js-form form transition">
     <span>Hello, what's your name?</span>
     <input type="text" />
   </form>
-  <h4 class="js-greetings transition"></h4>
+  <h4 class="js-greetings greetings transition"></h4>
   <form class="js-toDoForm transition">
     <input type="text" placeholder="Write a to do" />
   </form>
