:lipstick: Add Style at To Do Form

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <input type="text" />
   </form>
   <h4 class="js-greetings greetings transition"></h4>
-  <form class="js-toDoForm transition">
-    <input type="text" placeholder="Write a to do" />
+  <form class="js-toDoForm to-do-form transition">
+    <span>What is your main focus for today?</span>
+    <input type="text" />
   </form>
-  <ul class="js-toDoList"></ul>
+  <ul class="js-toDoList to-do-list"></ul>
   <span class="js-weather"></span>
   <script src="constant.js"></script>
   <script src="display.js"></script>
