--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <ul class="js-toDoList to-do-list"></ul>
   </div>
   <div class="js-weather weather"></div>
-  <script src="constant.js"></script>
-  <script src="display.js"></script>
-  <script src="clock.js"></script>
-  <script src="greetings.js"></script>
-  <script src="toDo.js"></script>
-  <script src="weather.js"></script>
+  <script src="constant/index.js"></script>
+  <script src="src/display.js"></script>
+  <script src="src/clock.js"></script>
+  <script src="src/greetings.js"></script>
+  <script src="src/toDo.js"></script>
+  <script src="src/weather.js"></script>
 </body>
 </html>
